tests/src/frontend/syntax/invalid/class_constant_modifiers.sk
class C() {
  async const x : String = "Fail";
}

fun main(): String {
  C::x
}
